; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_afs.c_grub_afs_read_inode.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_afs.c_grub_afs_read_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_afs_data = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.grub_afs_inode = type { i32 }

@GRUB_DISK_SECTOR_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_afs_data*, i32, %struct.grub_afs_inode*)* @grub_afs_read_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_afs_read_inode(%struct.grub_afs_data* %0, i32 %1, %struct.grub_afs_inode* %2) #0 {
  %4 = alloca %struct.grub_afs_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.grub_afs_inode*, align 8
  store %struct.grub_afs_data* %0, %struct.grub_afs_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.grub_afs_inode* %2, %struct.grub_afs_inode** %6, align 8
  %7 = load %struct.grub_afs_data*, %struct.grub_afs_data** %4, align 8
  %8 = getelementptr inbounds %struct.grub_afs_data, %struct.grub_afs_data* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.grub_afs_data*, %struct.grub_afs_data** %4, align 8
  %12 = getelementptr inbounds %struct.grub_afs_data, %struct.grub_afs_data* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @GRUB_DISK_SECTOR_BITS, align 4
  %16 = ashr i32 %14, %15
  %17 = mul nsw i32 %10, %16
  %18 = load %struct.grub_afs_inode*, %struct.grub_afs_inode** %6, align 8
  %19 = call i32 @grub_disk_read(i32 %9, i32 %17, i32 0, i32 4, %struct.grub_afs_inode* %18)
  ret i32 %19
}

declare dso_local i32 @grub_disk_read(i32, i32, i32, i32, %struct.grub_afs_inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
